Release 1.0.11